[gd_scene load_steps=5 format=2]

[ext_resource path="res://Font/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fight/UIAction/UIAction.gd" type="Script" id=2]
[ext_resource path="res://img Pokemon/img Fight/Graphique/Arrow.png" type="Texture" id=3]
[ext_resource path="res://img Pokemon/img Fight/UIAction/Box.png" type="Texture" id=4]

[node name="UIAction" type="Popup"]
margin_right = 400.0
margin_bottom = 175.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = 8.0
margin_top = 7.0
margin_right = 394.0
margin_bottom = 169.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 400.0
margin_bottom = 175.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sac" type="RichTextLabel" parent="."]
margin_left = 250.0
margin_top = 35.0
margin_right = 311.0
margin_bottom = 68.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "SAC"
scroll_active = false

[node name="SacArrow" type="TextureRect" parent="."]
visible = false
margin_left = 220.0
margin_top = 35.0
margin_right = 243.0
margin_bottom = 70.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttaqueArrow" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 35.0
margin_right = 48.0
margin_bottom = 70.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attaque" type="RichTextLabel" parent="."]
margin_left = 50.0
margin_top = 35.0
margin_right = 183.0
margin_bottom = 67.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "ATTAQUE"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuiteArrow" type="TextureRect" parent="."]
visible = false
margin_left = 219.0
margin_top = 100.0
margin_right = 242.0
margin_bottom = 135.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fuite" type="RichTextLabel" parent="."]
margin_left = 250.0
margin_top = 103.0
margin_right = 329.0
margin_bottom = 132.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "FUITE"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokemonArrow" type="TextureRect" parent="."]
visible = false
margin_left = 25.0
margin_top = 100.0
margin_right = 48.0
margin_bottom = 135.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pokemon" type="RichTextLabel" parent="."]
margin_left = 50.0
margin_top = 103.0
margin_right = 185.0
margin_bottom = 134.0
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "POKÃ©MON"
scroll_active = false
